# Interpreter-C

./: Cargo.toml  README.md  build.ts  deno.json  server.ts  wasm-pack.toml
kernel/: interface.rs
src/: c23_types.rs  main.rs
src/abi/: mod.rs
src/analysis/: code_scanner.rs
src/arch/: aarch64.rs  arm.rs  mod.rs  x86_64.rs
src/ci/: mod.rs
src/compiler/: core.rs  mod.rs
src/cpu/: features.rs
src/debug/: diagnostics.rs  info.rs  mod.rs  support.rs
src/diagnostics/: c23.rs
src/docs/: mod.rs
src/driver/: mod.rs
src/frontend/: attributes.rs  auto_type.rs  c23.rs  c23_complete.rs  contraints.rs  embed.rs  impl_defined.rs  parser.rs  preprocessor.rs  preprocessor_c23.rs  types.rs
src/gui/: language.rs  mod.rs
src/ide/: editor.rs  project_manager.rs
src/interpreter/: c_runtime.rs
src/jit/: abi.rs  codegen.rs  encoder.rs  memory.rs  mod.rs  registers.rs
src/linker/: mod.rs  predictive.rs
src/lto/: mod.rs
src/memory/: management.rs
src/metrics/: preprocessor_metrics.rs
src/monitoring/: integrated.rs  realtime.rs
src/optimizer/: mod.rs  pipeline.rs
src/orchestrator/: mod.rs
src/pgo/: mod.rs
src/pipeline/: mod.rs
src/project/: manager.rs
src/runtime/: environment.rs  libc.rs  memory.rs  memory_c23.rs  mod.rs  stack.rs  stdlib.rs  stdlib_c23.rs  stdlib_ext.rs
src/stdlib/: implementation.rs
src/syscall/: interface.rs
src/testing/: infrastructure.rs  kata.rs  mod.rs  test_framework.rs
src/types/: bit_precise.rs  typeof.rs
