[package]
name = "c_ide"
version = "0.0.3"
edition = "2025"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core
tokio = { version = "1.28", features = ["full"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# GUI
yew = "0.20"
web-sys = { version = "0.3", features = [
    "Document", "Element", "HtmlElement", "Window",
    "HtmlTextAreaElement", "console"
]}
monaco = { version = "0.3", features = ["yew"] }

# Compiler/Runtime
memmap2 = "0.5"
cranelift = "0.93"
wasmtime = "9.0"

[profile.release]
opt-level = 3
lto = true 