[package]
name = "c_ide"
version = "0.0.3"
edition = "2025"

[dependencies]
# Core
tokio = { version = "1.28", features = ["full"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12.1"
bitflags = "2.3.3"
lazy_static = "1.4.0"
clap = { version = "4.4", features = ["derive"] }

# GUI
yew = "0.20"
web-sys = { version = "0.3", features = [
    "Document", "Element", "HtmlElement", "Window",
    "HtmlTextAreaElement", "console"
]}
monaco = { version = "0.3", features = ["yew"] }

# Compiler/Runtime
memmap2 = "0.5"
cranelift = "0.93"
wasmtime = "9.0"
llvm-sys = "170.0.0"
libc = "0.2.147"
raw-cpuid = "10.7.0"

# Architecture support
capstone = "0.11.0"    # For disassembly
keystone = "0.9.2"     # For assembly
goblin = "0.7.1"       # Binary parsing
iced-x86 = "1.20.0"    # x86/x86-64 specific
object = "0.30.3"      # Object file manipulation

[profile.release]
opt-level = 3
lto = true 